Thu Dec  9 02:58:55 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm_core.h: type mismatch.

	* include/ruby/ruby.h : ditto.

	* mvm.c (ruby_vm_specific_ptr): ditto.

Thu Dec  9 01:18:55 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): vm->specific_storage.ptr had same
	  constraint as vm->cache.

Thu Dec  9 00:49:43 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): rb_ary_clear was insufficient,
	  because that can internally call realloc (for instance when the
	  array is shared).  Just leaving it to GC should suffice.

Thu Dec  9 00:09:58 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* include/ruby/vm.h: I believe this function can now handle
	  arbitrary pointers.

	* include/ruby/ruby.h: ditto.

	* mvm.c (ruby_vm_specific_ptr): ditto.

	* vm_core.h (rb_vm_struct): ditto.

	* ruby.c (proc_options): ditto.

	* io.c (ruby_vm_argf): ditto.

Wed Dec  8 22:31:15 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* marshal.c (final_free_marshal_compat): marshal_compat_t
	  variables shall be freed.

	* variable.c (unref_global_variable): typo fix

Wed Dec  8 22:06:40 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* variable.c (final_free_global_entry): global entries have
	  indirect references to other memory regions, which also shall be
	  freed.

	* variable.c (unref_global_variable): pulled up as a function.

	* variable.c (rb_alias_variable): use unref_global_variable.

Wed Dec  8 21:18:12 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): vm->cache needed when
	  rb_objspace_free runs, but after rb_objspace_free finished,
	  rb_objspace_xfree no longer possible.

Wed Dec  8 20:59:13 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): vm->mark_object_ary shall be flushed
	  prior to rb_objspace_free, otherwise objects might remain alive.

Wed Dec  8 20:29:44 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
